# AnimationViewer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: main.cpp
include/: camera.h  game.h  input.h  pipeline.h  renderer.h  resource.h  scene.h  texture.h  ui.h  window.h
src/: camera.cpp  game.cpp  input.cpp  pipeline.cpp  renderer.cpp  resource.cpp  scene.cpp  texture.cpp  ui.cpp  window.cpp
src/private_impl/graphics/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  indexed_mesh.cpp  indexed_mesh.h  pipeline.cpp  scoped_debug_group.cpp  scoped_debug_group.h  texture.cpp  texture.h
src/private_impl/graphics/pipelines/: pipeline_raster_opengl.cpp  pipeline_raster_opengl.h
src/private_impl/graphics/shaders/: bridging_header.h  disk.vert.glsl  full_screen.vert.glsl  mesh.frag.glsl  mesh.vert.glsl  rayleigh.h  rayleigh_sky.frag.glsl  wireframe.frag.glsl
src/private_impl/pipelines/: pipeline_raster_opengl.cpp  pipeline_raster_opengl.h
